# rag-base

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
app/: main.py
app/adapters/llm/: anthropic_adapter.py  base.py  llm_factory.py  ollama_adapter.py  openai_adapter.py
app/api/middleware/: auth.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: auth.py  documents.py  llm_config.py  query.py
app/core/: config.py  events.py  exceptions.py  logging.py  security.py
app/domain/interfaces/: document_parser.py  embedding_provider.py  llm_client.py  retriever.py  vector_store.py
app/domain/services/: document_service.py
app/infrastructure/cache/: cache_service.py  redis_client.py
app/infrastructure/database/: models.py  session.py
app/infrastructure/database/repositories/: document_repo.py  llm_config_repo.py  query_repo.py  tenant_repo.py
app/infrastructure/vectorstore/: qdrant_client.py
app/rag/: pipeline.py
app/rag/embeddings/: batch_processor.py  sentence_transformers_provider.py
app/rag/generation/: context_compressor.py  prompt_builder.py
app/rag/ingestion/: chunker.py  loader.py
app/rag/ingestion/parsers/: docx_parser.py  pdf_parser.py  txt_parser.py
app/rag/retrieval/: vector_retriever.py
app/schemas/: document.py  llm_config.py  query.py  tenant.py
docker/api/: Dockerfile.dev  Dockerfile.prod
docs/: .~lock.Luna the fast little rabbit 2.odt#  .~lock.the Fast Little Rabbit.odt#  Luna the fast little rabbit 2.odt  OLLAMA_CONFIG.md  RAG_BASE_AS_A_SERVICE.md  RAG_CONCEPTS.md  the Fast Little Rabbit.odt
scripts/: init_db.py
